Fixed carousel behavious on mobile devices

--- a/daft-2/src/styles/style.scss
+++ b/daft-2/src/styles/style.scss
@@ -336,6 +336,7 @@ $light-label-color: #454545;
     outline: none !important;
     width: 48px;
     color: #375973;
+    display: block;
     height: 48px;
     text-align: center;
     font-size: 30px;
